--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="acceuil1">
     <div class="contenu">
         <h2> Victor Graillot</h2>
-        <img src=".\profil.png" class="photo">
+        <img src=".\VictorG\profil.png" class="photo">
         <br>
         <p class="introduction">
         Étudiant en BTS SIO 2ème année option SLAM <br>
