--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="acceuil1">
     <div class="contenu">
         <h2> Victor Graillot</h2>
-        <img src=".\VictorG\profil.png" class="photo">
+        <img src=".\profil.png" class="photo">
         <br>
         <p class="introduction">
         Étudiant en BTS SIO 2ème année option SLAM <br>
@@ -60,5 +60,31 @@
     </div>
 </div> 
 </div>
+    
+<div class="competences">
+    <h2 id="titrecompetences">Mes compétences en programmation</h2>
+    <div class="mescompetences">
+        <li class="imagecompetences"> <img class ="comppicture" src="./html.png" alt="Icone de la compétence html"></li>
+        <li class="imagecompetences"> <img class="comppicture" src="./css.png" alt="Icone de la compétence css"></li>
+        <li class="imagecompetences"> <img class="comppicture" src="./js.png" alt="Icone de la compétence javascript"></li>
+        <li class="imagecompetences"> <img class="comppicture" src="./sql.png" alt="Icone de la compétence sql"></li>
+        <li class="imagecompetences"> <img class="comppicture" src="./java.png" alt="Icone de la compétence java"></li>
+        <li class="imagecompetences"> <img class="comppicture" src="./php.png" alt="Icone de la compétence php" style="margin-left: 20px;"></li>
+    </div>   
+</div>
+
+<div class="competenceslog">
+    <h2 id="titrecompetences"> Mes compétences logiciel </h2>
+    <div class="mescompetences"> 
+        <li class="imagecompetences"> <img class="comppicturelog" style="width:230px; " src=".word.png" alt="Icone de la compétence word"></li>        
+        <li class="imagecompetences"> <img class="comppicturelog" src="./powerpoint.png" alt="Icone de la compétence powerpoint"></li>                
+        <li class="imagecompetences"> <img class="comppicturelog" src="./vs.png" alt="Icone de la compétence vscode"></li>        
+        <li class="imagecompetences"> <img class="comppicturelog" src="./wamp.png" alt="Icone de la compétence wamp"></li>        
+        <li class="imagecompetences"> <img class="comppicturelog" src="./filezila.png" alt="Icone de la compétence filezila"></li>        
+    </div>
+</div>
+
+<iframe class="tableau" id="tableau" width="1400px" height="900px" src="./images/TableauE4.pdf"> </iframe>
+    
 </body>
 </html>
