--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
 </div>
 
-<iframe class="tableau" id="tableau" width="1400px" height="900px" src="./images/TableauE4.pdf"> </iframe>
+<iframe class="tableau" id="tableau" width="1400px" height="900px" src="VictorG/TableauE4.pdf"> </iframe>
     
 </body>
 </html>
