--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <div class="mescompetences">
         <li class="imagecompetences"> <img class ="comppicture" src="/VictorG/html.png" alt="Icone de la compétence html"></li>
         <li class="imagecompetences"> <img class="comppicture" src="/VictorG/css.png" alt="Icone de la compétence css"></li>
-        <li class="imagecompetences"> <img class="comppicture" src=":VictorG/js.png" alt="Icone de la compétence javascript"></li>
-        <li class="imagecompetences"> <img class="comppicture" src=":VictorG/sql.png" alt="Icone de la compétence sql"></li>
+        <li class="imagecompetences"> <img class="comppicture" src="/VictorG/js.png" alt="Icone de la compétence javascript"></li>
+        <li class="imagecompetences"> <img class="comppicture" src="/VictorG/sql.png" alt="Icone de la compétence sql"></li>
         <li class="imagecompetences"> <img class="comppicture" src="/VictorG/java.png" alt="Icone de la compétence java"></li>
         <li class="imagecompetences"> <img class="comppicture" src="/VictorG/php.png" alt="Icone de la compétence php" style="margin-left: 20px;"></li>
     </div>   
@@ -84,7 +84,7 @@
     </div>
 </div>
 
-<iframe class="tableau" id="tableau" width="1400px" height="900px" src="VictorG/TableauE4.pdf"> </iframe>
+<iframe class="tableau" id="tableau" width="1400px" height="900px" src="/VictorG/TableauE4.pdf"> </iframe>
     
 </body>
 </html>
