--- a/cv.html
+++ b/cv.html
@@ -8,6 +8,6 @@
     <title>CV</title>
 </head>
 <body>
-    <img src=".\images\CV.png" class="imageCV">
+    <img src="/VictorG/CV.PNG" class="imageCV">
 </body>
 </html>
