--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <ul>
     <li><a class="active" href="index.html">Accueil</a></li>
-    <li><a href="compétences.html">Compétences</a></li>
+    <li><a href="#titrecompetences">Compétences</a></li>
     <li><a href="AP.html">Projet AP</a></li>
     <li><a href="stage.html">Stage</a></li>
     <li><a href="Veille.html">Veille</a></li>
