--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
 </div>
 
 <iframe class="tableau" id="tableau" width="1400px" height="900px" src="/VictorG/TableauE4.pdf"> </iframe>
-    
+
+<footer>
+    <p>Tous droits réservés © 2023 Victor Graillot</p>
+    <br>
+    <p>06 48 41 42 66</p>
+    <br>
+    <a href="https://www.linkedin.com/in/victor-graillot" target="_blank">LinkedIn</a>
+</footer>
+
 </body>
 </html>
