--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
     </div>
 </div>
 
-<iframe class="tableau" id="tableau" width="1400px" height="900px" src="/VictorG/TableauE4.pdf"> </iframe>
+<div class="tableaucompetences">
+<h2 class="titretableau">Tableau de compétences</h2>
+<iframe class="tableau" id="tableau" width="1400px" height="900px" src="./images/TableauE4.pdf"> </iframe>
+</div>
 
 <footer>
     <p>Tous droits réservés © 2023 Victor Graillot</p>
