--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 <div class="tableaucompetences">
 <h2 class="titretableau">Tableau de compétences</h2>
-<iframe class="tableau" id="tableau" width="1400px" height="900px" src="./images/TableauE4.pdf"> </iframe>
+<iframe class="tableau" id="tableau" width="1400px" height="900px" src="/VictorG/TableauE4.pdf"> </iframe>
 </div>
 
 <footer>
