--- a/index.html
+++ b/index.html
@@ -31,13 +31,17 @@
             Je m'appelle Victor, j'ai 22 ans et je suis actuellement en 2ème année
             de BTS SIO option SLAM. 
             Passionné par le domaine de l’informatique, le développement
-            ainsi que par la cybersécurité depuis le collège, j’ai acquis, au cours de mon BTS, 
+            ainsi que par la cybersécurité depuis le longtemps, j’ai acquis, au cours de mon BTS, 
             des connaissances en programmation, en gestion de parcs informatiques et en cybersécurité.
         </p>
 
         <button type="button" class="bouton1" onclick="window.open('cv.html', '_blank')">CV</button>
     </div>
-</div> 
+</div>
+
+<div class="stluc">
+    <button type="button" class="bouton2" onclick="window.href('https://saintluc.btssio.fr/', '_blank')">Mon BTS</button>
+</div>
 
 <div class="content">
     <div class=formation id="SIO">
