--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </div>
 
 <div class="stluc">
-    <button type="button" class="bouton2" onclick="window.href('https://saintluc.btssio.fr/', '_blank')">Mon BTS</button>
+    <button type=button class="bouton2" onclick="window.open('https://saintluc.btssio.fr/', '_blank')">Mon BTS</button>
 </div>
 
 <div class="content">
