--- a/AP.html
+++ b/AP.html
@@ -15,5 +15,10 @@
         <li><a href="stage.html">Stage</a></li>
         <li><a href="Veille.html">Veille</a></li>
     </ul>
+<div class="fichesituation">
+<h2 class="titrefiche">Tableau de compétences</h2>
+<iframe class="situation" id="tableau" width="1400px" height="900px" src="/VictorG/situationSLAM2023.pdf"> </iframe>
+</div>
+    
 </body>
 </html>
