--- a/AP.html
+++ b/AP.html
@@ -17,8 +17,16 @@
     </ul>
 <div class="fichesituation">
 <h2 class="titrefiche">Tableau de compétences</h2>
-<iframe class="situation" id="tableau" width="1400px" height="900px" src="/VictorG/situationSLAM2023.pdf"> </iframe>
+<iframe class="situation" id="tableau" width="1200px" height="700px" src="/VictorG/situationSLAM2023.pdf"> </iframe>
 </div>
+
+<footer>
+    <p>Tous droits réservés © 2023 Victor Graillot</p>
+    <br>
+    <p>06 48 41 42 66</p>
+    <br>
+    <a href="https://www.linkedin.com/in/victor-graillot" target="_blank">LinkedIn</a>
+</footer>
     
 </body>
 </html>
