--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <ul>
     <li><a class="active" href="index.html">Accueil</a></li>
-    <li><a href="#titrecompetences">Compétences</a></li>
+    <li><a href="#titrecompepences">Compétences</a></li>
     <li><a href="stage.html">Stage</a></li>
     <li><a href="Veille.html">Veille</a></li>
 </ul>
@@ -64,26 +64,26 @@
 </div> 
 </div>
     
-<div class="competences">
-    <h2 id="titrecompetences">Mes compétences en programmation</h2>
+<div class="competencesprogrammation">
+    <h2 id="titrecompepences">Mes compétences en programmation</h2>
     <div class="mescompetences">
-        <li class="imagecompetences"> <img class ="comppicture" src="/VictorG/html.png" alt="Icone de la compétence html"></li>
-        <li class="imagecompetences"> <img class="comppicture" src="/VictorG/css.png" alt="Icone de la compétence css"></li>
-        <li class="imagecompetences"> <img class="comppicture" src="/VictorG/js.png" alt="Icone de la compétence javascript"></li>
-        <li class="imagecompetences"> <img class="comppicture" src="/VictorG/sql.png" alt="Icone de la compétence sql"></li>
-        <li class="imagecompetences"> <img class="comppicture" src="/VictorG/java.png" alt="Icone de la compétence java"></li>
-        <li class="imagecompetences"> <img class="comppicture" src="/VictorG/php.png" alt="Icone de la compétence php" style="margin-left: 20px;"></li>
+        <li class="imagecompetences"> <img class ="compimageprog" src="/VictorG/html.png" alt="Icone de la compétence html"></li>
+        <li class="imagecompetences"> <img class="compimageprog" src="/VictorG/css.png" alt="Icone de la compétence css"></li>
+        <li class="imagecompetences"> <img class="compimageprog" src="/VictorG/js.png" alt="Icone de la compétence javascript"></li>
+        <li class="imagecompetences"> <img class="compimageprog" src="/VictorG/sql.png" alt="Icone de la compétence sql"></li>
+        <li class="imagecompetences"> <img class="compimageprog" src="/VictorG/java.png" alt="Icone de la compétence java"></li>
+        <li class="imagecompetences"> <img class="compimageprog" src="/VictorG/php.png" alt="Icone de la compétence php" style="margin-left: 20px;"></li>
     </div>   
 </div>
 
-<div class="competenceslog">
-    <h2 id="titrecompetences"> Mes compétences logiciel </h2>
+<div class="competenceslogiciel">
+    <h2 id="titrecompepences"> Mes compétences logiciel </h2>
     <div class="mescompetences"> 
-        <li class="imagecompetences"> <img class="comppicturelog" style="width:230px; " src="/VictorG/word.png" alt="Icone de la compétence word"></li>        
-        <li class="imagecompetences"> <img class="comppicturelog" src="/VictorG/powerpoint.png" alt="Icone de la compétence powerpoint"></li>                
-        <li class="imagecompetences"> <img class="comppicturelog" src="/VictorG/vs.png" alt="Icone de la compétence vscode"></li>        
-        <li class="imagecompetences"> <img class="comppicturelog" src="/VictorG/wamp.png" alt="Icone de la compétence wamp"></li>        
-        <li class="imagecompetences"> <img class="comppicturelog" src="/VictorG/filezila.png" alt="Icone de la compétence filezila"></li>        
+        <li class="imagecompetences"> <img class="compimagelog" style="width:230px; " src="/VictorG/word.png" alt="Icone de la compétence word"></li>        
+        <li class="imagecompetences"> <img class="compimagelog" src="/VictorG/powerpoint.png" alt="Icone de la compétence powerpoint"></li>                
+        <li class="imagecompetences"> <img class="compimagelog" src="/VictorG/vs.png" alt="Icone de la compétence vscode"></li>        
+        <li class="imagecompetences"> <img class="compimagelog" src="/VictorG/wamp.png" alt="Icone de la compétence wamp"></li>        
+        <li class="imagecompetences"> <img class="compimagelog" src="/VictorG/filezila.png" alt="Icone de la compétence filezila"></li>        
     </div>
 </div>
 
