--- a/Veille.html
+++ b/Veille.html
@@ -23,7 +23,7 @@
             <button type=button class="boutonarticle1" onclick="window.open('https://www.gazette-drouot.com/article/de-la-blockchain-dans-l-art%25C2%25A0%253A-evolution-ou-revolution%25C2%25A0%253F/4579', '_blank')">Vers l'article</button>
         </div>
         <div class="article">
-            <h4 class="nomarticle">Elargir la portée du tiers Payant</h4>
+            <h4 class="nomarticle">Portée du tiers Payant</h4>
             <button type=button class="boutonarticle2" onclick="window.open('https://www.usine-digitale.fr/article/sante-moneytrack-elargit-la-portee-du-tiers-payant-grace-a-la-blockchain.N2082901', '_blank')">Vers l'article</button>
         </div>
         <div class="article">
