--- a/Veille.html
+++ b/Veille.html
@@ -18,19 +18,19 @@
 <div class="veille">
     <div class="blockchain">
         <h2>Ma veille technologique</h2>
-        <div class="article">
+        <div class="article" style="width= 170px">
             <h4 class="nomarticle">Blockchain dans l'art</h4>
             <button type=button class="boutonarticle1" onclick="window.open('https://www.gazette-drouot.com/article/de-la-blockchain-dans-l-art%25C2%25A0%253A-evolution-ou-revolution%25C2%25A0%253F/4579', '_blank')">Vers l'article</button>
         </div>
-        <div class="article">
+        <div class="article" style="width= 170px">
             <h4 class="nomarticle">Portée du tiers Payant</h4>
             <button type=button class="boutonarticle2" onclick="window.open('https://www.usine-digitale.fr/article/sante-moneytrack-elargit-la-portee-du-tiers-payant-grace-a-la-blockchain.N2082901', '_blank')">Vers l'article</button>
         </div>
-        <div class="article">
+        <div class="article" style="width= 170px">
             <h4 class="nomarticle">Google lance bard</h4>
             <button type=button class="boutonarticle3" onclick="window.open('https://siecledigital.fr/2023/03/22/google-bard-lancement-preview/', '_blank')">Vers l'article</button>
         </div>
-        <div class="article">
+        <div class="article" style="width= 170px">
             <h4 class="nomarticle">AI week en belgique</h4>
             <button type=button class="boutonarticle4" onclick="window.open('https://www.actuia.com/actualite/belgique-european-ai-week-du-27-mars-au-31-mar/', '_blank')">Vers l'article</button>
         </div>
